# Page-analyzer

./: Makefile  README.md  database.sql  db.dump  dump_db.sh  pyproject.toml  restore_db.sh
.github/workflows/: linter.yml
page_analyzer/: .gitignore  app.py  db.py  db_utils.py  http.py  utils.py  validation.py
page_analyzer/templates/: 404.html  base.html  definite_url.html  index.html  urls.html
tests/: conftest.py  test_app.py  test_db_utils.py  test_http.py  test_utils.py  test_validation.py
