[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["cyril <sokolovkirill9875@yandex.ru>"]
readme = "README.md"
packages = [{include = "page_analyzer"}]

[tool.poetry.dependencies]
python = "^3.10"
flask = "^3.0.0"
gunicorn = "^21.2.0"
python-dotenv = "^1.0.0"
pytest = "^7.4.4"
psycopg2-binary = "^2.9.9"
validators = "^0.22.0"



[tool.poetry.group.dev.dependencies]
flake8 = "^7.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
